# ipsum

./: .gitignore  README.md
.github/workflows/: check-client.yml  check-library.yml  check-server.yml  deploy-client.yml  deploy-library.yml  deploy-server.yml
ipsum/: .flake8  README.md  pyproject.toml
ipsum-client/: .eslintrc.json  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
ipsum-client/public/: PHOTO_LICENSE.md
ipsum-client/public/images/: next-image-export-optimizer-hashes.json
ipsum-client/src/: api.ts  constants.ts  createHTTPError.ts  types.ts
ipsum-client/src/components/: DropdownMenu.tsx  Footer.tsx  Header.tsx  Layout.tsx  NavLink.tsx  SEO.tsx
ipsum-client/src/pages/: 404.tsx  _app.tsx  _document.tsx  generate.tsx  index.tsx
ipsum-server/: .flake8  Dockerfile  README.md  pyproject.toml
ipsum-server/src/ipsum_server/: __init__.py  api_v1.py  app.py  limiter.py
ipsum-server/tests/: __init__.py  test_api_v1.py
ipsum/src/ipsum/dev/: __init__.py  main.py  manage_models.py  model_diagnostics.py  most_common.py  parser_diagnostics.py
ipsum/tests/: __init__.py  test_corpus.py  test_utils.py
ipsum/tests/model/: test_choices.py  test_language.py  test_markov_chain.py
ipsum/tests/parse/: test_parser.py  test_sentencizer.py  test_skeletonizer.py  test_standardizer.py  test_worderizer.py
