[tool.poetry]
name = "ipsum-server"
version = "0.1.0"
description = "A FastAPI server providing REST API access to the Ipsum text generator."
authors = ["Darko Trifunovski <darko@trifunovski.me>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
slowapi = "^0.1.7"
ipsum = "^0.1.1"
redis = "^3.4.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.0.0"

[tool.poetry.group.test.dependencies]
codecov = "^2.1.12"
coverage = "^7.0.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
tomli = "^2.0.1"
httpx = "^0.23.3"

[tool.poetry.group.lint.dependencies]
black = "^22.12.0"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-annotations = "^2.9.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"

[[tool.mypy.overrides]]
module = [
  "fastapi",
  "fastapi.middleware.cors",
  "fastapi.testclient",
  "uvicorn",
  "slowapi",
  "slowapi.errors",
  "slowapi.util",
]
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ipsum_server"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
